--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -452,7 +452,7 @@ Mnemonic: turns an integer into a I<char>acter.
 
 Coerces the invocant (or in sub form, its argument) to L<Str|/type/Str>, and returns the number of
 characters in the string. Characters should actually be grapheme clusters,
-though current implementation errornously count codepoints instead.
+though current implementations erroneously count codepoints instead.
 
     say 'møp'.chars;    # 3
 
