git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "8e3bc38"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "8e3bc38"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -768,7 +768,7 @@ and L<C<[]> array subscripting|#[]_Array_indexing/slicing> operators.
     my $deleted_value = %hash{$key}:delete;  # Perl 6 - use :delete adverb
     
     my $deleted_value = delete $array[$i];  # Perl 5
-    my $deleted_value = %array[$i]:delete;  # Perl 6 - use :delete adverb
+    my $deleted_value = @array[$i]:delete;  # Perl 6 - use :delete adverb
 
 =head3 C<exists>
 
