git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "1c2228f"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "1c2228f"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -60,7 +60,7 @@ tend to return I<on demand> supplies.
 
 =head2 method tap
 
-    method tap(Supply:D: &emit=-> $_ { },
+    method tap(Supply:D: &emit = -> $ { },
             :&done,
             :&quit={ die $_ },
             :&closing,
