--- a/perl6/doc/lib/Language/grammars.pod
+++ b/perl6/doc/lib/Language/grammars.pod
@@ -184,7 +184,7 @@ grammar, it tries to call a method of the same name as the grammar rule,
 giving it the newly create L<Match|/type/Match> object as a positional
 argument. If no such method exists, it is skipped.
 
-Here is a contrieved example of a grammar and actions in action:
+Here is a contrived example of a grammar and actions in action:
 
 =begin code
 use v6;
@@ -252,7 +252,7 @@ for @$res -> $p {
 }
 =end code
 
-This produces the following ouput:
+This produces the following output:
 
 =begin code
 Key: second     Value: b
