--- a/perl6/doc/lib/Language/mop.pod
+++ b/perl6/doc/lib/Language/mop.pod
@@ -26,7 +26,7 @@ corresponds to:
 
     A.x();
 
-(except that the declarative form runs at comple time, and the latter form
+(except that the declarative form runs at compile time, and the latter form
 does not).
 
 The meta object behind an object can be obtained with C<$obj.HOW>, where HOW
