--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -453,7 +453,7 @@ grammars, provided you activated the C<MONKEY-TYPING> pragma first.
 
 Since classes are usually C<our> scoped, and thus global, this means modifying
 global state, which is strongly discouraged. For almost all situations, there
-are better soluations.
+are better solutions.
 
     # don't do this
     use MONKEY-TYPING;
