--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -468,7 +468,8 @@ type of its arguments.
 
 While the operator has not changed, the rules for what exactly is matched
 depends on the types of both arguments, and those rules are far from
-identical in Perl 5 and Perl 6. See L<S03/Smart matching>
+identical in Perl 5 and Perl 6. See
+L<S03/Smart matching|http://design.perl6.org/S03.html#Smart_matching>
 
 =head3 C<& | ^> String Bitwise ops
 =head3 C<& | ^> Numeric Bitwise ops
@@ -802,7 +803,8 @@ In Perl 6, the C<~~> smartmatch op is used instead.
     $line ~~ s/abc/123/;          # Perl 6
 
 Alternately, the new C<.match> and C<.subst> methods can be used. Note that
-C<.subst> is non-mutating. See L<S05/Substitution>
+C<.subst> is non-mutating. See
+L<S05/Substitution|http://design.perl6.org/S05.html#Substitution>.
 
 =head3 Move modifiers
 
@@ -958,7 +960,8 @@ before translating into Perl 6.
 
 =head2 Command-line flags
 
-See L<S19-commandline>
+See
+L<S19/commandline|http://design.perl6.org/S19.html#Command_Line_Elements>
 
 Unchanged:
 
@@ -1188,7 +1191,8 @@ not writing one's own C<EXPORT> routine is worthwhile.
 
 =head4 C<Data::Dumper>
 
-In Perl 5, the L<Data::Dumper> module was used for serialization, and for
+In Perl 5, the L<Data::Dumper|https://metacpan.org/pod/Data::Dumper>
+module was used for serialization, and for
 debugging views of program data structures by the programmer.
 
 In Perl 6, these tasks are accomplished with the C<.perl> method, which
