git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "a1aeb93"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "a1aeb93"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/objects.pod
+++ b/perl6/doc/lib/Language/objects.pod
@@ -699,7 +699,7 @@ Logging[$*OUT].log(debug, 'here we go');        # [DEBUG] here we go
 =end code
 
 You can have multiple roles of the same name, but with different signatures;
-the normal rules of multi dispatch apply for chosing multi candidates.
+the normal rules of multi dispatch apply for choosing multi candidates.
 
 
 =head1 Meta-Object Programming and Introspection
