--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -125,7 +125,7 @@ imaginary part negated).
     sub sqrt(Numeric(Cool) $x)
 
 Coerces the invocant to L<Numeric|/type/Numeric> (or in the sub form, the
-arguemnt) and returns the square root,
+argument) and returns the square root,
 that is, a non-negative number that, when multiplied with itself, produces the
 original number.
 
@@ -350,7 +350,7 @@ base C<e> (Euler's Number) if no base was supplied
 Coerces the invocant (or in the sub form, the invocant) to
 L<Numeric|/type/Numeric>, and returns its
 L<Logarithm|https://en.wikipedia.org/wiki/Logarithm> to base 10, that is, a
-number that approximatly produces the original number when raised to the power
+number that approximately produces the original number when raised to the power
 of 10.
 
     say log10(1001);                    # 3.00043407747932
@@ -561,7 +561,7 @@ accepts everything), this title-cases each word:
 
     say "perl 6 programming".wordcase;      # Perl 6 Programming
 
-With a mather:
+With a matcher:
 
     say "have fun working on perl".wordcase(:where({ .chars > 3 }));
                                             # Have fun Working on Perl
