--- a/perl6/doc/lib/Type/Dateish.pod
+++ b/perl6/doc/lib/Type/Dateish.pod
@@ -8,7 +8,7 @@
 
 Both L<Date|/type/Date> and L<DateTime|/type/DateTime> support accessing a
 year, month and day-of-month, as well as related functionality such as
-calcuating the day of the week.
+calculating the day of the week.
 
 =head1 Methods
 
