--- a/perl6/doc/lib/Type/X/Syntax/Augment/WithoutMonkeyTyping.pod
+++ b/perl6/doc/lib/Type/X/Syntax/Augment/WithoutMonkeyTyping.pod
@@ -8,7 +8,7 @@
 
 Compile time error thrown when C<augment> is used without C<use MONKEY-TYPING>.
 
-Since C<augment> is considered a rather unsafe and impolate action, you have
+Since C<augment> is considered a rather unsafe and impolite action, you have
 to pre-declare your intent with the C<use MONKEY-TYPING;> pragma.
 
 If you don't do that, for example
