--- a/perl6/doc/lib/Type/X/Syntax/Reserved.pod
+++ b/perl6/doc/lib/Type/X/Syntax/Reserved.pod
@@ -6,7 +6,7 @@
 
     class X::Syntax::Reserved does X::Syntax { }
 
-Syntax error thrwon when a syntax is used which is reserved for future
+Syntax error thrown when a syntax is used which is reserved for future
 expansion.
 
 For example
