--- a/perl6/doc/lib/Language/modules.pod
+++ b/perl6/doc/lib/Language/modules.pod
@@ -54,7 +54,8 @@ To share your module, do the following:
     =item Regarding the C<LICENSE> file, if you have no other preference,
     you might just use the same one that Rakudo Perl 6 uses. Just
     copy/paste the raw form of L<its license|https://github.com/rakudo/rakudo/blob/nom/LICENSE>
-    into your own C<LICENSE> file.
+    into your own C<LICENSE> file, and change C<"The Perl Foundation">
+    in the document to your name or the name of your company.
 
     =item If you don't yet have any tests, you can leave out the C<t>
     directory and C<basic.t> file for now. For more info on how to write
@@ -86,6 +87,9 @@ To share your module, do the following:
         "version" : "0.1.0",
         "description" : "Wonderful simulation to get some perspective.",
         "author" : "R<Your Name>",
+        "provides" : {
+            "Vortex::TotalPerspective" : "lib/Vortex/TotalPerspective.pm"
+        },
         "depends" : [ ],
         "source-url" : "git://github.com/R<you>/Vortex-TotalPerspective.git"
     }
@@ -95,6 +99,10 @@ To share your module, do the following:
     http://design.perl6.org/S11.html#Versioning> for further
     details). If the version number doesn't matter to you or your users
     right now, you can just put in an asterisk (*) for the version.
+
+    In C<provides> section, include all the namespaces provided by
+    your distribution.
+
     =end item
 
     =item Put your project under git version control if you haven't done so
