git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "0e60c9a"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "0e60c9a"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -759,6 +759,17 @@ Instead, use a C<NEXT> block within the body of the loop.
 =comment NOTE FOR EDITORS: When adding functions, please place them in
                            alphabetical order.
 
+=head3 Built-ins with bare blocks
+
+Builtins that previously accepted a bare block followed, without
+a comma, by the remainder of the arguments will now
+require a comma between the block and the arguments e.g. C<map>, C<grep>,
+etc.
+
+    my @results = grep { $_ eq "bars" } @foo; # Perl 5
+    my @results = grep { $_ eq "bars" }, @foo; # Perl 6
+
+
 =head3 C<delete>
 
 Turned into an adverb of the
@@ -782,7 +793,6 @@ and L<C<[]> array subscripting|#[]_Array_indexing/slicing> operators.
 
     say "element exists" if exists $array[$i];  # Perl 5
     say "element exists" if @array[$i]:exists;  # Perl 6 - use :exists adverb
-
 
 =head2 Regular Expressions ( Regex / Regexp )
 
