git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "abf90a7"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "abf90a7"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/setbagmix.pod
+++ b/perl6/doc/lib/Language/setbagmix.pod
@@ -221,8 +221,8 @@ Equivalent to C«!(>)».
     multi sub infix:<<(<+)>>(Baggy $a, Baggy $b --> Bool)
 
 Returns C<True> if C<$a> is a Baggy B<subset> of C<$b>, i.e., if all the
-elements of C<$a> are in C<$b> and each argument of C<$a> is weighed at
-least as heavily as the element is in C<$b>.
+elements of C<$a> are in C<$b> and each element of C<$b> is weighed at
+least as heavily as the element is in C<$a>.
 
 =head4 infix ≼
 
@@ -236,8 +236,8 @@ Equivalent to L«(<+)».
     multi sub infix:<<(>+)>>(Any $a, Any $b --> Bool)
 
 Returns C<True> if C<$a> is a Baggy B<superset> of C<$b>, i.e., if all the
-elements of C<$b> are in C<$a> and no argument of C<$a> is weighted heavier
-than that element is in C<$b>.
+elements of C<$b> are in C<$a> and no element of C<$b> is weighted heavier
+than that element is in C<$a>.
 
 =head4 infix ≽
 
