--- a/perl6/doc/lib/Language/syntax.pod
+++ b/perl6/doc/lib/Language/syntax.pod
@@ -74,7 +74,7 @@ say "world";
 =end code
 
 Both semicolons are optional here, but leaving them out increases the chance
-of syntax errors when adding more lines laste.
+of syntax errors when adding more lines later.
 
 =head2 Comments
 
