--- a/perl6/doc/lib/Type/Proc/Async.pod
+++ b/perl6/doc/lib/Type/Proc/Async.pod
@@ -10,7 +10,7 @@ B<Note:> only the MoarVM backend of Rakudo implements C<Proc::Async> at the
 moment.
 
 C<Proc::Async> allows you to run external commands asynchronously, capturing
-standard input and output handles, and optionally write to its standard input.
+standard output and error handles, and optionally write to its standard input.
 
 =begin code
     # command with arguments
