git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "ab324ed"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "ab324ed"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -502,8 +502,8 @@ leading whitespace stripped.
     method trim-trailing()
     sub trim-trailing(Str(Cool))
 
-Coerces the invocant (or in sub form, its argument) to L<Str|/type/Str>, and returns the string with both
-leading and trailing whitespace stripped.
+Coerces the invocant (or in sub form, its argument) to L<Str|/type/Str>, and
+returns the string with trailing whitespace stripped.
 
     my $stripped = '  abc '.trim-trailing;
     say "<$stripped>";          # <  abc>
@@ -784,3 +784,5 @@ EVAL
 =end comment
 
 =end pod
+
+# vim: expandtab shiftwidth=4 ft=perl6
