--- a/perl6/doc/lib/Type/Mixy.pod
+++ b/perl6/doc/lib/Type/Mixy.pod
@@ -25,7 +25,7 @@ Returns the sum of all the weights
 
     method roll ($count = 1)
 
-Similar to a L<Bag.roll>, but with C<Real> weights rather than integral
+Similar to a L<Bag>.roll, but with C<Real> weights rather than integral
 ones.
 
 =head1 See Also
