--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -206,7 +206,7 @@ following is possible too:
         method b() { $.a; }
     }
 
-    SaySomething.a; # prints "a"
+    SaySomething.b; # prints "a"
     =end code
 
 For more details on objects, classes and their attributes and methods see
