--- a/perl6/doc/lib/Type/Str.pod
+++ b/perl6/doc/lib/Type/Str.pod
@@ -387,6 +387,17 @@ Note that only in the C<s///> form C<:ii> implies C<:i> and C<:ss> implies
 C<:s>. In the method form, the C<:s> and C<:i> modifiers must be added to the
 regex, not the C<subst> method call.
 
+=head2 method subst-mutate
+
+Where C<subst> returns the modified string and leaves the original
+unchanged, it is possible to mutate the original string by using
+C<subst-mutate>.  If the match is successful, the method returns a C<Match>
+object representing the successful match, or C<Any> otherwise.
+
+    my $some-string = "Some foo";
+    my $match = $some-string.subst-mutate(/foo/, "string");
+    say $some-string;  #-> Some string
+    say $match;        #-> ｢foo｣
 
 =head2 routine substr
 
@@ -506,3 +517,4 @@ Returns C<True> if the string is L<the same as|eq> C<$other>.
 
 =end pod
 
+# vim: expandtab shiftwidth=4 ft=perl6
