git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "4b29315"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "4b29315"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/control.pod
+++ b/perl6/doc/lib/Language/control.pod
@@ -140,9 +140,29 @@ specify a final value for the block.
 
 =head2 loop
 
-=head2 repeat/while
+=head2 repeat/while, repeat/until
 
-=head2 repeat/until
+Perl 5 allows one to apply a statement modifier to a C<do> block such that
+C-like constructs such as
+
+    do {
+        ...
+    } while $x < 10;   # allowed in Perl 5; not in Perl 6
+
+are possible.
+
+This is specifically disallowed in Perl 6.  Nevertheless, one can repeat a
+block up to a given condition in the same way wit a C<repeat> loop:
+
+    repeat {
+        ...
+    } while $x < 10;
+
+This can also be written quite naturally with C<until>:
+
+    repeat {
+        ...
+    } until $x >= 10;
 
 =head2 unless
 
